# ytmtui

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.pt-BR.md  deny.toml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  AUTHENTICATION.md  AUTHENTICATION.pt-BR.md  FEATURES.md  FEATURES.pt-BR.md  GETTING_STARTED.md  GETTING_STARTED.pt-BR.md  KEYMAP.md  KEYMAP.pt-BR.md  TROUBLESHOOTING.md  TROUBLESHOOTING.pt-BR.md
docs/superpowers/plans/: 2026-07-05-authentication-foundation.md  2026-07-09-documentation-showcase-refactor.md  2026-07-09-github-readme-refresh.md  2026-07-10-provider-ready-artwork-home.md  2026-07-12-doctor-command.md  2026-07-12-safe-authentication.md
docs/superpowers/specs/: 2026-07-05-stability-playback-ux-architecture-design.md  2026-07-09-documentation-showcase-refactor-design.md  2026-07-09-github-readme-refresh-design.md  2026-07-10-provider-ready-artwork-home-design.md  2026-07-12-safe-authentication-doctor-design.md
scripts/: install.sh  refresh-cookies.sh  test-refresh-cookies.sh
src/: app.rs  artwork.rs  ascii_art.rs  config.rs  doctor.rs  event.rs  fs_util.rs  home.rs  lib.rs  lyrics.rs  main.rs  models.rs  mpris.rs  theme.rs  visualizer.rs
src/app/: animation.rs  authentication.rs  home.rs  messages.rs  mod.rs  navigation.rs  playback.rs  preferences.rs  queue.rs  search.rs  settings.rs  tasks.rs  testing.rs
src/player/: mod.rs  tap.rs
src/provider/: mock.rs  mod.rs
src/ui/: authentication.rs  main_panel.rs  mod.rs  nav.rs  now_playing.rs  now_playing_screen.rs  player.rs  settings.rs  sidebar.rs  splash.rs  state.rs  tests.rs
src/ytmusic/: auth.rs  mod.rs  models.rs  parse.rs  provider.rs  signin.rs  stream.rs
tests/: provider_boundary.rs
