[package]
name = "ytmtui"
version = "0.1.0"
edition = "2021"
description = "Cliente TUI para YouTube Music escrito em Rust com Ratatui"
license = "MIT"
readme = "README.md"

[[bin]]
name = "ytmtui"
path = "src/main.rs"

[dependencies]
# Interface de terminal
ratatui = "0.29"
crossterm = "0.28"

# Runtime assíncrono
tokio = { version = "1", features = ["full"] }

# Requisições HTTP para a API do YouTube Music (InnerTube)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serialização / desserialização JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Reprodução de áudio (decodifica praticamente qualquer formato via symphonia)
rodio = { version = "0.20", features = ["symphonia-all"] }

# Utilidades
anyhow = "1"
tempfile = "3"
dirs = "5"

# Hash SHA-1 para o cabeçalho de autenticação (SAPISIDHASH) do YouTube Music
sha1 = "0.10"

# Conversão de capas (thumbnails) em arte ASCII/Unicode
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }

[profile.release]
opt-level = 3
lto = true
