[package]
name = "ytmtui"
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
description = "Cliente TUI para YouTube Music escrito em Rust com Ratatui"
authors = ["Itthiago <kiyottiago@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Itthiago034/ytmtui"
homepage = "https://github.com/Itthiago034/ytmtui"
keywords = ["youtube-music", "tui", "ratatui", "music", "terminal"]
categories = ["multimedia::audio", "command-line-utilities"]
exclude = ["/.github", "/docs", "/ytmtui_src", "examples/apitest.rs", "*.txt"]

[[bin]]
name = "ytmtui"
path = "src/main.rs"

[dependencies]
# Interface de terminal
ratatui = "0.29"
crossterm = "0.28"

# Runtime assíncrono
tokio = { version = "1", features = ["full"] }

# Requisições HTTP para a API do YouTube Music (InnerTube)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serialização / desserialização JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Reprodução de áudio (decodifica praticamente qualquer formato via symphonia)
rodio = { version = "0.20", features = ["symphonia-all"] }

# Utilidades
anyhow = "1"
tempfile = "3"
dirs = "5"

# Hash SHA-1 para o cabeçalho de autenticação (SAPISIDHASH) do YouTube Music
sha1 = "0.10"

# Album art: image decoding + terminal image protocols (Kitty/Sixel/iTerm2
# with a Unicode half-block fallback)
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
ratatui-image = "3.0.0"

# FFT for the Home screen's real-time audio spectrum visualizer
rustfft = "6"

# Column-width-aware text truncation/padding (CJK/emoji occupy 2 columns)
unicode-width = "0.2"
chrono = { version = "0.4.45", default-features = false, features = ["clock"] }
souvlaki = { version = "0.8.3", default-features = false, features = ["use_zbus"] }
async-trait = "0.1.89"
toml = "0.8"

[profile.release]
opt-level = 3
lto = true
# Uma unidade de codegen deixa o LTO otimizar o binário inteiro de uma vez;
# strip tira os símbolos de debug do binário distribuído. Não usar
# `panic = "abort"`: a thread de áudio depende de catch_unwind.
codegen-units = 1
strip = "symbols"
